// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionModal> fail to open modal with disabled button 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={true}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
  </Modal>
</span>
`;

exports[`<ActionModal> style and text customizations 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="more"
    />
     
    Open
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        TitleText
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <p>
        Lorem Ipsum
      </p>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Close
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        TriggerCallback
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;

exports[`<ActionModal> with an onAction callback fail to close modal with not opened on action 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Abort
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;

exports[`<ActionModal> with an onAction callback successful close modal 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Abort
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;

exports[`<ActionModal> with an onAction callback successful close modal on action 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Abort
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;

exports[`<ActionModal> with an onAction callback successful close modal on hide 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Abort
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;

exports[`<ActionModal> with an onAction callback successful open modal with enabled button 1`] = `
<span>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-open"
    disabled={false}
    onClick={[Function]}
  >
     
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      />
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    />
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="js-close"
        disabled={false}
        onClick={[Function]}
      >
        Abort
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="js-action"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalFooter>
  </Modal>
</span>
`;
